--- a/CLI/formulario-CRUD/package.json
+++ b/CLI/formulario-CRUD/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
+    "shortid": "^2.2.16",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.25",
+    "@types/shortid": "^0.0.29",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
