--- a/CLI/auth-firebase/package.json
+++ b/CLI/auth-firebase/package.json
@@ -12,9 +12,11 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-spinner": "^1.0.4",
+    "vuelidate": "^0.7.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/vuelidate": "^0.7.13",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
