--- a/CLI/axios-dolar/package.json
+++ b/CLI/axios-dolar/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "^6.1.0",
     "roboto-fontface": "*",
